Fix initial chatbox icon
Sometimes the icon is not visible on game start. Drawing it after main
page selection seems to solve it.

Set the size in css, it was using height=22, despite what html said.

Remove obsolete style, from previous icons.

--- a/freeciv-web/src/main/webapp/css/civclient.css
+++ b/freeciv-web/src/main/webapp/css/civclient.css
@@ -55,8 +55,9 @@ button {
   display: flex;
 }
 
-#game_chat_box > i {
-  font-size: 110%;
+#chat_direction {
+  width: 29px;
+  height: 20px;
 }
 
 #game_text_input {
